--- a/src/css/common.css
+++ b/src/css/common.css
@@ -1,13 +1,114 @@
 .visually-hidden {
-    position: absolute;
-    width: 1px;
-    height: 1px;
-    margin: -1px;
-    border: 0;
-    padding: 0;
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
 
-    white-space: nowrap;
-    clip-path: inset(100%);
-    clip: rect(0 0 0 0);
-    overflow: hidden;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
+body {
+  padding-top: 10px;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+ul,
+p {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+ul {
+  padding: 0;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+}
+
+.wrapper {
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+.container-form {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  top: 0;
+  right: 15px;
+  left: 15px;
+  height: 100px;
+  margin-bottom: 30px;
+  background-image: url('https://t4.ftcdn.net/jpg/01/98/22/93/360_F_198229394_rlwgOYFZmVlAinIdudpSMobuyfClZrSH.jpg');
+  background-size: cover;
+}
+
+input {
+  height: 30px;
+  min-width: 200px;
+  border-radius: 4px;
+  outline: none;
+}
+
+button {
+  height: 34px;
+  width: 80px;
+  border-radius: 4px;
+  cursor: pointer;
+  text-transform: uppercase;
+  font-size: large;
+  background-color: rgb(154, 221, 231);
+}
+
+.gallery {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 10px;
+}
+
+.photo-card {
+  width: calc(25% - 20px);
+}
+
+.photo {
+  width: 100%;
+  height: 250px;
+}
+
+img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.info {
+  display: flex;
+  justify-content: space-around;
+  width: 100%;
+  gap: 10px;
+
+  padding-top: 10px;
+  padding-bottom: 10px;
+  text-align: center;
+}
+
+.load-more {
+  display: block;
+  width: 150px;
+  margin: 20px auto;
+  background-color: rgb(219, 71, 95);
+  box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.8);
 }
