--- a/src/css/common.css
+++ b/src/css/common.css
@@ -14,6 +14,8 @@
 
 body {
   padding-top: 10px;
+  font-family: Tahoma, Geneva, sans-serif;
+  font-weight: bold;
 }
 
 h1,
@@ -44,32 +46,35 @@ img {
 
 .container-form {
   display: flex;
-  justify-content: center;
+  justify-content: left;
   align-items: center;
   top: 0;
   right: 15px;
   left: 15px;
-  height: 100px;
+  height: 150px;
   margin-bottom: 30px;
-  background-image: url('https://t4.ftcdn.net/jpg/01/98/22/93/360_F_198229394_rlwgOYFZmVlAinIdudpSMobuyfClZrSH.jpg');
+  background-image: url('https://images.pexels.com/photos/663487/pexels-photo-663487.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2');
   background-size: cover;
 }
 
 input {
-  height: 30px;
-  min-width: 200px;
+  height: 50px;
+  min-width: 250px;
   border-radius: 4px;
   outline: none;
+  margin-left: 20px;
 }
 
 button {
-  height: 34px;
-  width: 80px;
+  height: 50px;
+  width: 150px;
   border-radius: 4px;
   cursor: pointer;
   text-transform: uppercase;
   font-size: large;
-  background-color: rgb(154, 221, 231);
+  font-weight: bold;
+  background-color: rgb(227, 238, 239);
+  margin-left: 50px;
 }
 
 .gallery {
@@ -107,8 +112,10 @@ img {
 
 .load-more {
   display: block;
-  width: 150px;
+  width: 200px;
+  height: 70px;
   margin: 20px auto;
   background-color: rgb(219, 71, 95);
-  box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.8);
+  /* box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.8); */
+  font-weight: bold;
 }
